; ModuleID = '/home/carl/AnghaBench/sway/sway/tree/extr_view.c_append_prop.c'
source_filename = "/home/carl/AnghaBench/sway/sway/tree/extr_view.c_append_prop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 }

@config = common dso_local global %struct.TYPE_2__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i8*, i8*)* @append_prop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @append_prop(i8* %0, i8* %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = icmp ne i8* %8, null
  br i1 %9, label %11, label %10

10:                                               ; preds = %2
  store i64 0, i64* %3, align 8
  br label %33

11:                                               ; preds = %2
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** @config, align 8
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %27

16:                                               ; preds = %11
  %17 = load i8*, i8** %5, align 8
  %18 = call i8* @escape_pango_markup(i8* %17)
  store i8* %18, i8** %6, align 8
  %19 = load i8*, i8** %4, align 8
  %20 = load i8*, i8** %6, align 8
  %21 = call i32 @lenient_strcat(i8* %19, i8* %20)
  %22 = load i8*, i8** %6, align 8
  %23 = call i64 @strlen(i8* %22)
  store i64 %23, i64* %7, align 8
  %24 = load i8*, i8** %6, align 8
  %25 = call i32 @free(i8* %24)
  %26 = load i64, i64* %7, align 8
  store i64 %26, i64* %3, align 8
  br label %33

27:                                               ; preds = %11
  %28 = load i8*, i8** %4, align 8
  %29 = load i8*, i8** %5, align 8
  %30 = call i32 @lenient_strcat(i8* %28, i8* %29)
  %31 = load i8*, i8** %5, align 8
  %32 = call i64 @strlen(i8* %31)
  store i64 %32, i64* %3, align 8
  br label %33

33:                                               ; preds = %27, %16, %10
  %34 = load i64, i64* %3, align 8
  ret i64 %34
}

declare dso_local i8* @escape_pango_markup(i8*) #1

declare dso_local i32 @lenient_strcat(i8*, i8*) #1

declare dso_local i64 @strlen(i8*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
